# Glitter

./: CMakeLists.txt
Samples/HelloCubic/: frag.fs  main.cpp
Samples/HelloLightBasic/: frag.fs  main.cpp
Samples/HelloRectangle/: main.cpp
Samples/HelloShader/: main.cpp
Samples/HelloShaderClass/: main.cpp
Samples/HelloTexture/: HT_shader.fs  main.cpp
Samples/HelloTextureBlend/: HTB_shader.fs  main.cpp
Samples/HelloTriangle/: main.cpp
Samples/LoadModel/: filesystem.h  main.cpp  mesh.h
